--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,31 +1,63 @@
 <div class="row justify-content-center">
   <div class="col-lg-6 mt-5 mt-lg-0">
     <div class="col-sm-9">
+      <br/><br/>
       <h1 class="display-2 mb-0">Search</h1>
     </div>
     <br/><br/><br/>
-    <div class="dropdown">
-      <button class="btn btn-secondary dropdown-toggle" type="button" id="specialization" data-toggle="dropdown"
-              aria-haspopup="true" aria-expanded="false">
-        Specialization
-      </button>
-      <div class="dropdown-menu" aria-labelledby="specialization">
-        <a class="dropdown-item" href="#">Action</a>
-        <a class="dropdown-item" href="#">Another action</a>
-        <a class="dropdown-item" href="#">Something else here</a>
+    <form (ngSubmit)="search()" role="form">
+      <div class="dropdown">
+        <button class="btn btn-secondary dropdown-toggle" type="button" id="specialization" data-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">
+          Specialization
+        </button>
+        <div class="dropdown-menu" aria-labelledby="specialization">
+          <a class="dropdown-item" (click)="getSelectedDropdown('Allergy and immunology')">Allergy and immunology</a>
+          <a class="dropdown-item">Anesthesiology</a>
+          <a class="dropdown-item">Dermatology</a>
+          <a class="dropdown-item">Diagnostic radiology</a>
+          <a class="dropdown-item">Emergency medicine</a>
+          <a class="dropdown-item">Family medicine</a>
+          <a class="dropdown-item">Internal medicine</a>
+          <a class="dropdown-item">Medical genetics</a>
+          <a class="dropdown-item">Neurology</a>
+          <a class="dropdown-item">Obstetrics and gynecology</a>
+          <a class="dropdown-item">Ophthalmology</a>
+          <a class="dropdown-item">Pathology</a>
+          <a class="dropdown-item">Pediatrics</a>
+          <a class="dropdown-item">Physical medicine and rehabilitation</a>
+          <a class="dropdown-item">Preventive medicine</a>
+          <a class="dropdown-item">Psychiatry</a>
+          <a class="dropdown-item">Radiation oncology</a>
+          <a class="dropdown-item">Surgery</a>
+          <a class="dropdown-item">Urology</a>
+          <a class="dropdown-item">Veterinary</a>
+        </div>
       </div>
-    </div>
-    <div class="dropdown">
-      <button class="btn btn-secondary dropdown-toggle" type="button" id="health_insurance" data-toggle="dropdown"
-              aria-haspopup="true" aria-expanded="false">
-        Health Insurance
-      </button>
-      <div class="dropdown-menu" aria-labelledby="health_insurance">
-        <a class="dropdown-item" href="#">Action</a>
-        <a class="dropdown-item" href="#">Another action</a>
-        <a class="dropdown-item" href="#">Something else here</a>
+      <div class="dropdown">
+        <button class="btn btn-secondary dropdown-toggle" type="button" id="location" data-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">
+          Provincia
+        </button>
+        <div class="dropdown-menu" aria-labelledby="location">
+          <a class="dropdown-item">Capital Federal</a>
+          <a class="dropdown-item">Cordoba</a>
+          <a class="dropdown-item">Santa Fe</a>
+        </div>
       </div>
-    </div>
+      <div class="dropdown">
+        <button class="btn btn-secondary dropdown-toggle" type="button" id="health_insurance" data-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">
+          Health Insurance
+        </button>
+        <div class="dropdown-menu" aria-labelledby="health_insurance">
+          <a class="dropdown-item">Medicus</a>
+          <a class="dropdown-item">OSDE</a>
+          <a class="dropdown-item">Swiss Medical</a>
+        </div>
+      </div>
+      <button (click)="search()" class="btn btn-primary my-4" type="submit">Search</button>
+    </form>
   </div>
   <br/><br/><br/>
 </div>
