Se crea pantalla para linkear el recepcionista con el profesional.

--- a/src/app/auth/user-profile/user-profile.component.html
+++ b/src/app/auth/user-profile/user-profile.component.html
@@ -28,7 +28,7 @@
       <br/><br/><br/>
       <div class="d-flex justify-content-center">
         <ng-container class="custom-tab-content flex-column flex-md-row">
-          <button class="btn btn-1 btn-neutral" id="linkRec" type="button">Link Receptionist</button>
+          <button class="btn btn-1 btn-neutral" type="button" routerLink="link-receptionist">Link Receptionist</button>
           <button class="btn btn-1 btn-neutral" type="button">View Patients</button>
           <button class="btn btn-1 btn-neutral" type="button">View Calendar</button>
           <button class="btn btn-1 btn-neutral" type="button" routerLink="update">Modify Profile</button>
