Search Fixed + Availability

--- a/src/app/auth/user-profile/user-profile.component.html
+++ b/src/app/auth/user-profile/user-profile.component.html
@@ -63,6 +63,7 @@
       <br/><br/><br/>
       <div class="d-flex justify-content-center">
         <ng-container class="custom-tab-content flex-column flex-md-row">
+          <button class="btn btn-1 btn-neutral" type="button" routerLink="availability">Add Availability</button>
           <button class="btn btn-1 btn-neutral" type="button">View Appointments</button>
           <button class="btn btn-1 btn-neutral" type="button" routerLink="update">Modify Profile</button>
         </ng-container>
