--- a/src/app/auth/link-receptionist/link-receptionist.component.html
+++ b/src/app/auth/link-receptionist/link-receptionist.component.html
@@ -10,10 +10,15 @@
       <span></span>
       <span></span>
     </div>
-    <div class="col-sm-9">
-      <br/><br/>
-      <h1 class="display-2 mb-0">Link Receptionist</h1>
+    <div class="row justify-content-center">
+      <div class="col-lg-6 mt-5 mt-lg-0">
+        <div class="col-sm-9">
+          <br/><br/>
+          <h1 class="display-2 mb-0">Link Receptionist</h1>
+        </div>
+      </div>
     </div>
+    <br/><br/>
     <div class="container pt-lg-md">
       <div class="row justify-content-center">
         <div class="col-lg-5">
