--- a/src/app/auth/user-profile/user-profile.component.html
+++ b/src/app/auth/user-profile/user-profile.component.html
@@ -12,7 +12,7 @@
           <button class="btn btn-1 btn-neutral" type="button" routerLink="search">Search Professionals</button>
           <button class="btn btn-1 btn-neutral" type="button" routerLink="register-pet">Add Pet</button>
           <button class="btn btn-1 btn-neutral" type="button" routerLink="manage-pets">Manage Pets</button>
-          <button class="btn btn-1 btn-neutral" type="button">Attach Medical Studies</button>
+          <button class="btn btn-1 btn-neutral" type="button" routerLink="medical-tests">Attach Medical Tests</button>
           <button class="btn btn-1 btn-neutral" type="button" routerLink="update">Modify Profile</button>
         </ng-container>
       </div>
@@ -29,7 +29,8 @@
       <div class="d-flex justify-content-center">
         <ng-container class="custom-tab-content flex-column flex-md-row">
           <button class="btn btn-1 btn-neutral" type="button" routerLink="link-receptionist">Link Receptionist</button>
-          <button class="btn btn-1 btn-neutral" type="button">View Patients</button>
+          <button class="btn btn-1 btn-neutral" type="button" routerLink="medical-history">View Patient's History
+          </button>
           <button class="btn btn-1 btn-neutral" type="button">View Calendar</button>
           <button class="btn btn-1 btn-neutral" type="button" routerLink="update">Modify Profile</button>
         </ng-container>
