Appointments + deletion of unused components

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,7 +6,7 @@
         <img class="img-fluid" src="../../assets/img/hero-bg.jpg" alt="First slide">
       </ng-template>
       <ng-template ngbSlide>
-        <img class="img-fluid" src="../../assets/img/about.jpg" alt="Second slide">
+        <img class="img-fluid" src="../../assets/img/about-bg.jpg" alt="Second slide">
       </ng-template>
     </ngb-carousel>
     <!--      </div>-->
