Appointments + added username in medical tests + fix Birthday + fix address

--- a/src/app/auth/medical-tests/medical-tests.component.html
+++ b/src/app/auth/medical-tests/medical-tests.component.html
@@ -20,7 +20,7 @@
       </div>
 
       <label class="btn btn-default">
-        <input type="file" accept="application/pdf" (change)="selectFile($event)"/>
+        <input [formControlName]="'file'" type="file" accept="application/pdf" (change)="selectFile($event)"/>
       </label>
 
       <button class="btn btn-primary my-4" [disabled]="!selectedFiles" (click)="upload()">
