--- a/src/app/auth/modify-profile/modify-profile.component.html
+++ b/src/app/auth/modify-profile/modify-profile.component.html
@@ -41,7 +41,7 @@
                     <div class="input-group-prepend">
                       <span class="input-group-text"><i class="ni ni-lock-circle-open"></i></span>
                     </div>
-                    <input class="form-control" placeholder=password type="password" [formControlName]="'password'"
+                    <input class="form-control" placeholder='**********' type="password" [formControlName]="'password'"
                            name="password" required disabled>
                   </div>
                 </div>
@@ -84,31 +84,17 @@
                            name="address" required autofocus>
                   </div>
                 </div>
-                <!-- Datepicker -->
-                <div class="form-group mb-3">
-                  <div class="form-group" [ngClass]="{'focused':focus1===true}">
-                    <div class="input-group input-group-alternative">
-                      <div class="input-group-prepend">
-                        <span class="input-group-text"><i class="ni ni-calendar-grid-59"></i></span>
-                      </div>
-                      <input class="form-control datepicker" placeholder="Birthday" formControlName="birthday"
-                             id="birthday" name="dp" ngbDatepicker #d="ngbDatepicker" (click)="d.toggle()"
-                             (focus)="focus1=true"
-                             (blur)="focus1=false" type="text" (select)="onDateSelection($event)" autocomplete="off"/>
-                    </div>
-                  </div>
-                </div>
                 <div class="form-group mb-3" [ngClass]="{'focused':focus===true}">
                   <div class="custom-control custom-radio mb-3">
                     <input id="male" name="sex" [formControlName]="'sex'" class="custom-control-input" value="male"
-                             type="radio" [checked]="sexUser == 'male' ? true : false">
+                           type="radio" [checked]="sexUser == 'male'">
                     <label class="custom-control-label" for="male">
                       <label>Male</label>
                     </label>
                   </div>
                   <div class="custom-control custom-radio mb-3">
                     <input id="female" name="sex" [formControlName]="'sex'" class="custom-control-input" value="female"
-                           type="radio" [checked]="sexUser == 'female' ? true : false">
+                           type="radio" [checked]="sexUser == 'female'">
                     <label class="custom-control-label" for="female">
                       <label>Female</label>
                     </label>
