--- a/src/app/auth/user-profile/user-profile.component.html
+++ b/src/app/auth/user-profile/user-profile.component.html
@@ -31,7 +31,7 @@
           <button class="btn btn-1 btn-neutral" type="button" routerLink="link-receptionist">Link Receptionist</button>
           <button class="btn btn-1 btn-neutral" type="button" routerLink="medical-history">View Patient's History
           </button>
-          <button class="btn btn-1 btn-neutral" type="button">View Calendar</button>
+          <button class="btn btn-1 btn-neutral" type="button" routerLink="view-calendar">View Calendar</button>
           <button class="btn btn-1 btn-neutral" type="button" routerLink="update">Modify Profile</button>
         </ng-container>
       </div>
@@ -65,7 +65,7 @@
       <div class="d-flex justify-content-center">
         <ng-container class="custom-tab-content flex-column flex-md-row">
           <button class="btn btn-1 btn-neutral" type="button" routerLink="availability">Add Availability</button>
-          <button class="btn btn-1 btn-neutral" type="button">View Appointments</button>
+            <button class="btn btn-1 btn-neutral" type="button" routerLink="modify-calendar">View Appointments</button>
           <button class="btn btn-1 btn-neutral" type="button" routerLink="update">Modify Profile</button>
         </ng-container>
       </div>
