--- a/src/app/auth/modify-pet/modify-pet.component.html
+++ b/src/app/auth/modify-pet/modify-pet.component.html
@@ -1,9 +1,3 @@
-<!--Need to fix-->
-<div>
-  <ngb-alert class="alert-danger" *ngIf="!petForm.get('name').valid && petForm.get('name').touched">
-    <span class="alert-text">Name required</span>
-  </ngb-alert>
-</div>
 <main>
   <section class="section section-shaped section-lg">
     <div class="shape shape-style-1 bg-gradient-default">
@@ -21,7 +15,7 @@
         <div class="col-lg-5">
           <div class="card bg-secondary shadow border-0">
             <div class="card-body px-lg-5 py-lg-5">
-              <form [formGroup]="petForm" (ngSubmit)="registerPet()" role="form">
+              <form [formGroup]="updateForm" (ngSubmit)="update()" role="form">
                 <div class="form-group mb-3" [ngClass]="{'focused':focus===true}">
                   <div class="input-group input-group-alternative">
                     <div class="input-group-prepend">
@@ -59,8 +53,8 @@
                       <div class="input-group-prepend">
                         <span class="input-group-text"><i class="ni ni-calendar-grid-59"></i></span>
                       </div>
-                      <input class="form-control datepicker" placeholder="Birthday" formControlName="birthday"
-                             id="birthday" name="dp" ngbDatepicker #d="ngbDatepicker" (click)="d.toggle()"
+                      <input class="form-control datepicker" placeholder="Birthday" formControlName="date_of_birth"
+                             id="date_of_birth" name="dp" ngbDatepicker #d="ngbDatepicker" (click)="d.toggle()"
                              (focus)="focus1=true"
                              (blur)="focus1=false" type="text" (select)="onDateSelection($event)" autocomplete="off"/>
                     </div>
@@ -116,7 +110,7 @@
                   </div>
                 </div>
                 <div class="text-center">
-                  <button type="submit" class="btn btn-primary my-4">Register</button>
+                  <button type="submit" class="btn btn-primary my-4">Update</button>
                 </div>
               </form>
             </div>
