--- a/src/app/auth/medical-history/medical-history.component.html
+++ b/src/app/auth/medical-history/medical-history.component.html
@@ -16,53 +16,56 @@
     <input (click)="search()" class="btn btn-primary my-4" type="submit" value="Search"/>
     <input (click)="add()" class="btn btn-primary my-4" type="submit" value="Add"/>
     <br/><br/>
-    <div class="col-lg-6 mt-5 mt-lg-0" *ngIf="searchedFlag">
-      <div class="col-sm-9">
-        <br/><br/>
-        <h1 class="display-3 mb-0">Patient's medical history</h1>
-      </div>
-      <br/>
-      <div class="d-flex justify-content-center">
-        <ng-container class="custom-tab-content flex-column flex-md-row">
-          <table class="table">
-            <thead>
-            <tr>
-              <th>Date</th>
-              <th>Details</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr *ngFor="let medH of medicalHistory">
-              <td>{{medH.date}}</td>
-              <td>{{medH.details}}</td>
-            </tr>
-            </tbody>
-          </table>
-        </ng-container>
+    <div class="row justify-content-center">
+      <div class="col-lg-6 mt-5 mt-lg-0" *ngIf="searchedFlag">
+        <div class="col-sm-9">
+          <br/><br/>
+          <h1 class="display-3 mb-0">Patient's medical history</h1>
+        </div>
+        <br/>
+        <div class="d-flex justify-content-center">
+          <ng-container class="custom-tab-content flex-column flex-md-row">
+            <table class="table">
+              <thead>
+              <tr>
+                <th>Date</th>
+                <th>Details</th>
+              </tr>
+              </thead>
+              <tbody>
+              <tr *ngFor="let medH of medicalHistory">
+                <td>{{medH.date | date}}</td>
+                <td>{{medH.details}}</td>
+              </tr>
+              </tbody>
+            </table>
+          </ng-container>
+        </div>
       </div>
     </div>
 
     <div *ngIf="addFlag" class="container">
-      <div class="alert alert-warning" *ngIf="medHistoryForm.dirty && medHistoryForm.invalid">Enter valid values</div>
-      <div class="alert alert-warning" *ngIf="medHistoryForm.dirty && date.invalid">Enter valid Date</div>
-      <div class="alert alert-warning" *ngIf="medHistoryForm.dirty && details.invalid">Enter at least 5 characters in
-        Details
-      </div>
-
-      <form (ngSubmit)="!medHistoryForm.invalid && saveMedHistory()" #medHistoryForm="ngForm">
-        <fieldset class="form-group">
-          <label>Date</label>
-          <input type="date" #date="ngModel"
-                 [ngModel]="medHistory.date | date:'yyyy-MM-dd' "
-                 (ngModelChange)="medHistory.date = $event"
-                 class="form-control" name="date" required="required">
-        </fieldset>
-        <fieldset class="form-group">
-          <label>Details</label>
-          <textarea #details="ngModel"
-                    [(ngModel)]="medHistory.details" class="form-control"
-                    name="details" required="required" minlength="5"></textarea>
-        </fieldset>
+      <form [formGroup]="medHistoryForm" (ngSubmit)="!medHistoryForm.invalid && saveMedHistory()" role="form">
+        <div class="form-group mb-3" [ngClass]="{'focused':focus===true}">
+          <div class="input-group input-group-alternative">
+            <div class="input-group-prepend">
+              <span class="input-group-text"><i class="ni ni-calendar-grid-59"></i></span>
+            </div>
+            <input class="form-control datepicker" placeholder="Date" formControlName="date"
+                   id="date" name="date" ngbDatepicker #d="ngbDatepicker" (click)="d.toggle()"
+                   type="text" (select)="onDateSelection($event)" autocomplete="off"/>
+          </div>
+        </div>
+        <div class="form-group mb-3" [ngClass]="{'focused':focus===true}">
+          <div class="input-group input-group-alternative">
+            <div class="input-group-prepend">
+              <span class="input-group-text"><i class="ni ni-email-83"></i></span>
+            </div>
+            <textarea class="form-control" placeholder="Details" type="text" id="details"
+                      [formControlName]="'details'"
+                      name="details" autofocus></textarea>
+          </div>
+        </div>
         <button type="submit" class="btn btn-primary my-4">Add</button>
       </form>
     </div>
