Se agrega lógica para eliminar pets

--- a/src/app/auth/manage-pets/manage-pets.component.html
+++ b/src/app/auth/manage-pets/manage-pets.component.html
@@ -34,10 +34,10 @@
             <td>{{pet.surgeries}}</td>
             <td>{{pet.medicines}}</td>
             <td>
-              <button (click)="updatePet(pet.id)" class="btn btn-success">Update</button>
+              <button (click)="updatePet(pet.idPet)" class="btn btn-success">Update</button>
             </td>
             <td>
-              <button (click)="deletePet(pet.id)" class="btn btn-warning">Delete</button>
+              <button (click)="deletePet(pet.idPet)" class="btn btn-warning">Delete</button>
             </td>
           </tr>
           </tbody>
