--- a/src/app/auth/modify-pet/modify-pet.component.html
+++ b/src/app/auth/modify-pet/modify-pet.component.html
@@ -41,7 +41,8 @@
                     <div class="input-group-prepend">
                       <span class="input-group-text"><i class="ni ni-email-83"></i></span>
                     </div>
-                    <input class="form-control" value={{breedPet}} placeholder="Breed (if applies)" type="text" id="breed"
+                    <input class="form-control" value={{breedPet}} placeholder="Breed (if applies)" type="text"
+                           id="breed"
                            [formControlName]="'breed'"
                            name="breed" autofocus>
                   </div>
@@ -82,7 +83,8 @@
                     <div class="input-group-prepend">
                       <span class="input-group-text"><i class="ni ni-email-83"></i></span>
                     </div>
-                    <textarea class="form-control" value={{medicalHistoryPet}} placeholder="Medical History" type="text" id="medical_history"
+                    <textarea class="form-control" value={{medicalHistoryPet}} placeholder="Medical History" type="text"
+                              id="medical_history"
                               [formControlName]="'medicalHistory'"
                               name="medical_history" autofocus></textarea>
                   </div>
@@ -93,7 +95,8 @@
                     <div class="input-group-prepend">
                       <span class="input-group-text"><i class="ni ni-email-83"></i></span>
                     </div>
-                    <textarea class="form-control" value={{surgeriesPet}} placeholder="Surgeries" type="text" id="surgeries"
+                    <textarea class="form-control" value={{surgeriesPet}} placeholder="Surgeries" type="text"
+                              id="surgeries"
                               [formControlName]="'surgeries'"
                               name="surgeries" autofocus></textarea>
                   </div>
@@ -104,7 +107,8 @@
                     <div class="input-group-prepend">
                       <span class="input-group-text"><i class="ni ni-email-83"></i></span>
                     </div>
-                    <textarea class="form-control" value={{medicinesPet}} placeholder="Medicines" type="text" id="medicines"
+                    <textarea class="form-control" value={{medicinesPet}} placeholder="Medicines" type="text"
+                              id="medicines"
                               [formControlName]="'medicines'"
                               name="medicines" autofocus></textarea>
                   </div>
