--- a/src/app/auth/search/search.component.html
+++ b/src/app/auth/search/search.component.html
@@ -5,54 +5,57 @@
       <h1 class="display-2 mb-0">Search</h1>
     </div>
     <br/><br/>
-    <form [formGroup]="searchForm" (ngSubmit)="search()" role="form" method="get">
-      <select formControlName="selectSpecializations" class="btn btn-secondary dropdown-toggle">
-        <option [ngValue]="null" disabled>Specialization</option>
-        <option class="dropdown-item" *ngFor="let specialization of specializations" [ngValue]="specialization"
-                id="Specialization">{{specialization}}</option>
-      </select>
-      <select formControlName="selectProvinces" class="btn btn-secondary dropdown-toggle">
-        <option [ngValue]="null" disabled>Province</option>
-        <option class="dropdown-item" *ngFor="let province of provinces" [ngValue]="province"
-                id="Province">{{province}}</option>
-      </select>
-      <select formControlName="selectHealthInsurance" class="btn btn-secondary dropdown-toggle">
-        <option [ngValue]="null" disabled>Health Insurance</option>
-        <option class="dropdown-item" *ngFor="let healthInsurance of healthInsurances" [ngValue]="healthInsurance"
-                id="HealthInsurance">{{healthInsurance}}</option>
-      </select>
-    </form>
-    <input (click)="search()" class="btn btn-primary my-4" type="submit" value="search"/>
-
-    <div class="col-lg-6 mt-5 mt-lg-0" *ngIf="searched()">
-      <div class="col-sm-9">
-        <br/><br/>
-        <h1 class="display-3 mb-0">Professionals</h1>
-      </div>
-      <br/>
-      <div class="d-flex justify-content-center">
-        <ng-container class="custom-tab-content flex-column flex-md-row">
-          <table class="table">
-            <thead>
-            <tr>
-              <th>First Name</th>
-              <th>Last Name</th>
-              <th>Address</th>
-              <th>Schedule</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr *ngFor="let user of users">
-              <td>{{user.firstName}}</td>
-              <td>{{user.lastName}}</td>
-              <td>{{user.homeAddress}}</td>
-              <td>
-                <button (click)="schedule(user.username)" class="btn btn-success">Schedule</button>
-              </td>
-            </tr>
-            </tbody>
-          </table>
-        </ng-container>
+    <div class="row justify-content-center">
+      <form [formGroup]="searchForm" (ngSubmit)="search()" role="form" method="get">
+        <select formControlName="selectSpecializations" class="btn btn-secondary dropdown-toggle">
+          <option [ngValue]="null" disabled>Specialization</option>
+          <option class="dropdown-item" *ngFor="let specialization of specializations" [ngValue]="specialization"
+                  id="Specialization">{{specialization}}</option>
+        </select>
+        <select formControlName="selectProvinces" class="btn btn-secondary dropdown-toggle">
+          <option [ngValue]="null" disabled>Province</option>
+          <option class="dropdown-item" *ngFor="let province of provinces" [ngValue]="province"
+                  id="Province">{{province}}</option>
+        </select>
+        <select formControlName="selectHealthInsurance" class="btn btn-secondary dropdown-toggle">
+          <option [ngValue]="null" disabled>Health Insurance</option>
+          <option class="dropdown-item" *ngFor="let healthInsurance of healthInsurances" [ngValue]="healthInsurance"
+                  id="HealthInsurance">{{healthInsurance}}</option>
+        </select>
+        <input (click)="search()" class="btn btn-primary my-4" type="submit" value="Search"/>
+      </form>
+    </div>
+    <div class="row justify-content-center">
+      <div class="col-lg-6 mt-5 mt-lg-0" *ngIf="searched()">
+        <div class="col-sm-9">
+          <br/><br/>
+          <h1 class="display-3 mb-0">Professionals</h1>
+        </div>
+        <br/>
+        <div class="d-flex justify-content-center">
+          <ng-container class="custom-tab-content flex-column flex-md-row">
+            <table class="table">
+              <thead>
+              <tr>
+                <th>First Name</th>
+                <th>Last Name</th>
+                <th>Address</th>
+                <th>Schedule</th>
+              </tr>
+              </thead>
+              <tbody>
+              <tr *ngFor="let user of users">
+                <td>{{user.firstName}}</td>
+                <td>{{user.lastName}}</td>
+                <td>{{user.homeAddress}}</td>
+                <td>
+                  <button (click)="schedule(user.username)" class="btn btn-success">Schedule</button>
+                </td>
+              </tr>
+              </tbody>
+            </table>
+          </ng-container>
+        </div>
       </div>
     </div>
   </div>
